--- a/src/index.css
+++ b/src/index.css
@@ -7,3 +7,17 @@ body,
 div#root {
     height: 100%;
 }
+
+::-webkit-scrollbar {
+    width: 4px;
+}
+ 
+::-webkit-scrollbar-thumb {
+    -webkit-border-radius: 10px;
+    border-radius: 6px;
+    background: #7A7C85;
+    -webkit-box-shadow: inset 0 0 6px #7A7C85; 
+}
+::-webkit-scrollbar-thumb:window-inactive {
+	background: #7A7C85
+}
