--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,12 @@ div#root {
     height: 100%;
 }
 
+@layer base {
+    html {
+      font-family: "Roboto", sans-serif;
+    }
+}
+
 ::-webkit-scrollbar {
     width: 4px;
 }
